# neuroHarmonize

./: .gitignore  .setup.cfg  LICENSE  README.md  README.rst  pypi_instructions.md  pyproject.toml  setup.py  update_instructions.md
neuroHarmonize/: __init__.py  harmonizationApply.py  harmonizationLearn.py  harmonizationNIFTI.py  neuroCombat.py  utils.py
neuroharmonize/: __init__.py  harmonizationApply.py  harmonizationLearn.py  neuroCombat.py
rpomponio/neuroHarmonize/: README.md
rpomponio/neuroHarmonize/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
rpomponio/neuroHarmonize/ghrs-data/snapshots/: 2025-01-16_141544_top_paths_snapshot.csv  2025-01-16_141544_views_clones_series_fragment.csv  2025-01-16_231127_top_referrers_snapshot.csv  2025-01-16_231127_views_clones_series_fragment.csv  2025-01-17_230937_top_paths_snapshot.csv  2025-01-17_230937_top_referrers_snapshot.csv  2025-01-17_230937_views_clones_series_fragment.csv  2025-01-18_230941_top_paths_snapshot.csv  2025-01-18_230941_top_referrers_snapshot.csv  2025-01-18_230941_views_clones_series_fragment.csv  2025-01-19_230923_top_paths_snapshot.csv  2025-01-19_230923_top_referrers_snapshot.csv  2025-01-19_230923_views_clones_series_fragment.csv
rpomponio/neuroHarmonize/latest-report/: report.html  report.md  report_for_pdf.html
tests/: data_tests.py  synthetic_data.pkl
